# Kalshi-

kalshi-bot/: .env.example  README.md  alembic.ini  httpx.py  pyproject.toml
kalshi-bot/app/: __init__.py  config.py  constants.py  main.py
kalshi-bot/app/backtest/: __init__.py
kalshi-bot/app/clients/: __init__.py  historical_router.py  kalshi_auth.py  kalshi_rest.py  kalshi_ws.py
kalshi-bot/app/db/: __init__.py  base.py  models.py  session.py
kalshi-bot/app/execution/: __init__.py  order_manager.py  paper_broker.py
kalshi-bot/app/forecast/: __init__.py  ensemble.py
kalshi-bot/app/learning/: __init__.py
kalshi-bot/app/ops/: __init__.py  health.py
kalshi-bot/app/portfolio/: __init__.py
kalshi-bot/app/research/: __init__.py
kalshi-bot/app/risk/: __init__.py  engine.py  kelly.py
kalshi-bot/app/scanner/: __init__.py  liquidity_filters.py  market_scanner.py
kalshi-bot/app/schemas/: __init__.py  fixed_point.py  markets.py  orderbook.py  orders.py  risk.py  signals.py
kalshi-bot/docs/: api_notes.md  architecture.md  runbooks.md
kalshi-bot/migrations/: env.py
kalshi-bot/migrations/versions/: 20260312_000001_create_core_tables.py
kalshi-bot/tests/: __init__.py
kalshi-bot/tests/integration/: test_historical_router.py  test_pagination.py
kalshi-bot/tests/replay/: test_historical_routing_replay.py
kalshi-bot/tests/unit/: test_auth_signing.py  test_fixed_point.py  test_historical_router.py  test_kalshi_rest_client.py  test_kelly_and_edge.py  test_ops_health.py  test_order_manager.py  test_orderbook_conversion.py  test_risk_engine.py  test_signing.py
