[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-bot"
version = "0.1.0"
description = "Kalshi-only prediction market trading bot"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13.1",
  "tenacity>=8.2.3",
  "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "pytest-cov>=5.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
